Fix missing border-box class definition

--- a/src/web/client/assets/css/main.scss
+++ b/src/web/client/assets/css/main.scss
@@ -199,6 +199,11 @@ select{
     }
 }
 
+.border-box{
+    border: 1px solid $dark;
+    padding: $hspace;
+}
+
 .container{
     margin-left: auto;
     margin-right: auto;
